unpackaged/main/default/objects/Lead/fields/Accepted_Key_Requirments__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Key_Requirments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted Key Requirments</label>
    <type>Checkbox</type>
</CustomField>