unpackaged/main/default/objects/Lead/fields/Any_Specific_Terms__c.field-meta.xml
<CustomField>
    <fullName>Any_Specific_Terms__c</fullName>
    <label>Any Specific Terms?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>