unpackaged/main/default/objects/Lead/fields/Apartment_Type__c.field-meta.xml
<CustomField>
    <fullName>Apartment_Type__c</fullName>
    <description>Apartment Type Selected in the enquiry</description>
    <label>Apartment Type</label>
    <type>TextArea</type>
</CustomField>