unpackaged/main/default/objects/Lead/fields/Are_you_connected_to_a_channel_manager__c.field-meta.xml
<CustomField>
    <fullName>Are_you_connected_to_a_channel_manager__c</fullName>
    <label>Are you connected to a channel manager</label>
    <length>250</length>
    <type>Text</type>
</CustomField>