unpackaged/main/default/objects/Lead/fields/Associations_Membership__c.field-meta.xml
<CustomField>
    <fullName>Associations_Membership__c</fullName>
    <label>Associations Membership</label>
    <type>TextArea</type>
</CustomField>