unpackaged/main/default/objects/Lead/fields/Booked__c.field-meta.xml
<CustomField>
    <fullName>Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booked</label>
    <type>Checkbox</type>
</CustomField>