unpackaged/main/default/objects/Lead/fields/Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Building_Name__c</fullName>
    <description>Building name submitted in the enquiry</description>
    <label>Building Name</label>
    <type>TextArea</type>
</CustomField>