unpackaged/main/default/objects/Lead/fields/Can_you_take_credit_card_payments__c.field-meta.xml
<CustomField>
    <fullName>Can_you_take_credit_card_payments__c</fullName>
    <label>Can you take credit card payments?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>