unpackaged/main/default/objects/Lead/fields/Channel_Managers__c.field-meta.xml
<CustomField>
    <fullName>Channel_Managers__c</fullName>
    <description>Enter the Channel Manager the Partner uses. If &#39;Other&#39;, fill in the field Channel Managers (Other).</description>
    <inlineHelpText>Enter the Channel Manager the Partner uses. If &#39;Other&#39;, fill in the field Channel Managers (Other).</inlineHelpText>
    <label>Channel Managers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel_Managers</valueSetName>
    </valueSet>
</CustomField>