unpackaged/main/default/objects/Lead/fields/Channel_Managers_Other__c.field-meta.xml
<CustomField>
    <fullName>Channel_Managers_Other__c</fullName>
    <description>Fill in this box if the partner uses a Channel Manager that is not listed in the main list.</description>
    <inlineHelpText>Fill in this box if the partner uses a Channel Manager that is not listed in the main list.</inlineHelpText>
    <label>Channel Managers (Other)</label>
    <type>TextArea</type>
</CustomField>