unpackaged/main/default/objects/Lead/fields/Check_in_grade__c.field-meta.xml
<CustomField>
    <fullName>Check_in_grade__c</fullName>
    <label>Check in grade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>