unpackaged/main/default/objects/Lead/fields/Client_type__c.field-meta.xml
<CustomField>
    <fullName>Client_type__c</fullName>
    <label>Client type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Client_type</valueSetName>
    </valueSet>
</CustomField>