unpackaged/main/default/objects/Lead/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Stay</fullName>
            </value>
            <value>
                <fullName>Duplicate Lead</fullName>
            </value>
            <value>
                <fullName>No Requirements Ever</fullName>
            </value>
            <value>
                <fullName>No Requirements Now</fullName>
            </value>
            <value>
                <fullName>Lead Cold / Stopped Responding</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Length of Stay</fullName>
            </value>
            <value>
                <fullName>Left the Company</fullName>
            </value>
            <value>
                <fullName>Not the Right Contact Within the Company</fullName>
            </value>
            <value>
                <fullName>Failed_Due_Diligence</fullName>
                <label>Failed Due Diligence</label>
            </value>
            <value>
                <fullName>Location not required</fullName>
            </value>
            <value>
                <fullName>Less than 10 apartments/units</fullName>
            </value>
            <value>
                <fullName>Unsatisfactory reviews</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>