unpackaged/main/default/objects/Lead/fields/Cognism_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Cognism_Campaign__c</fullName>
    <label>Cognism Campaign</label>
    <type>TextArea</type>
</CustomField>