unpackaged/main/default/objects/Lead/fields/Commission_Included__c.field-meta.xml
<CustomField>
    <fullName>Commission_Included__c</fullName>
    <label>Commission Included?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>