unpackaged/main/default/objects/Lead/fields/Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Number__c</fullName>
    <label>Company Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>