unpackaged/main/default/objects/Lead/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <label>Cost Centre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cost_Centre</valueSetName>
    </valueSet>
</CustomField>