unpackaged/main/default/objects/Lead/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <inlineHelpText>Enter the countries the partner operates in.</inlineHelpText>
    <label>Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UN_Member_States</valueSetName>
    </valueSet>
</CustomField>