unpackaged/main/default/objects/Lead/fields/Data_Protection_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Data_Protection_Contact_Email__c</fullName>
    <label>Data Protection Contact Email</label>
    <type>Email</type>
</CustomField>