unpackaged/main/default/objects/Lead/fields/Data_Protection_Contact_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Data_Protection_Contact_Job_Title__c</fullName>
    <label>Data Protection Contact Job Title</label>
    <type>TextArea</type>
</CustomField>