unpackaged/main/default/objects/Lead/fields/Data_Protection_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Data_Protection_Contact_Name__c</fullName>
    <label>Data Protection Contact Name</label>
    <type>TextArea</type>
</CustomField>