unpackaged/main/default/objects/Lead/fields/Data_Protection_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Data_Protection_Contact_Phone_Number__c</fullName>
    <label>Data Protection Contact Phone Number</label>
    <type>Phone</type>
</CustomField>