unpackaged/main/default/objects/Lead/fields/Do_You_Manage_the_Services__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Manage_the_Services__c</fullName>
    <label>Do You Manage the Services?</label>
    <type>TextArea</type>
</CustomField>