unpackaged/main/default/objects/Lead/fields/Enquiry_From__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_From__c</fullName>
    <label>Enquiry From</label>
    <type>TextArea</type>
</CustomField>