unpackaged/main/default/objects/Lead/fields/Enquiry_To__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_To__c</fullName>
    <label>Enquiry To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>