unpackaged/main/default/objects/Lead/fields/Finance_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Finance_Contact_Email__c</fullName>
    <label>Finance Contact Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>