unpackaged/main/default/objects/Lead/fields/Finance_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Finance_Contact_Name__c</fullName>
    <label>Finance Contact Name</label>
    <type>TextArea</type>
</CustomField>