unpackaged/main/default/objects/Lead/fields/Finance_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Finance_Contact_Phone__c</fullName>
    <label>Finance Contact Phone</label>
    <type>Phone</type>
</CustomField>