unpackaged/main/default/objects/Lead/fields/Finance_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Finance_Contact_Role__c</fullName>
    <label>Finance Contact Role</label>
    <type>TextArea</type>
</CustomField>