unpackaged/main/default/objects/Lead/fields/Gas_safety__c.field-meta.xml
<CustomField>
    <fullName>Gas_safety__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gas safety</label>
    <type>Checkbox</type>
</CustomField>