unpackaged/main/default/objects/Lead/fields/Grade_Rating__c.field-meta.xml
<CustomField>
    <fullName>Grade_Rating__c</fullName>
    <formula>IMAGE(
IF(pi__grade__c = &quot;D-&quot;, &quot;/img/samples/stars_100.gif&quot;,
IF(pi__grade__c = &quot;D&quot;, &quot;/img/samples/stars_200.gif&quot;,
IF(pi__grade__c = &quot;D+&quot;, &quot;/img/samples/stars_200.gif&quot;,
IF(pi__grade__c = &quot;C-&quot;, &quot;/img/samples/stars_200.gif&quot;,
IF(pi__grade__c = &quot;C&quot;, &quot;/img/samples/stars_300.gif&quot;,
IF(pi__grade__c = &quot;C+&quot;, &quot;/img/samples/stars_300.gif&quot;,
IF(pi__grade__c = &quot;B-&quot;, &quot;/img/samples/stars_400.gif&quot;,
IF(pi__grade__c = &quot;B&quot;, &quot;/img/samples/stars_400.gif&quot;,
IF(pi__grade__c = &quot;B+&quot;, &quot;/img/samples/stars_400.gif&quot;,
IF(pi__grade__c = &quot;A-&quot;, &quot;/img/samples/stars_500.gif&quot;,
IF(pi__grade__c = &quot;A&quot;, &quot;/img/samples/stars_500.gif&quot;,
IF(pi__grade__c = &quot;A+&quot;, &quot;/img/samples/stars_500.gif&quot;,
&quot;/img/samples/stars_000.gif&quot;
)))))))))))),
&quot;Rating&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grade Rating</label>
    <type>Text</type>
</CustomField>