unpackaged/main/default/objects/Lead/fields/Guest_count__c.field-meta.xml
<CustomField>
    <fullName>Guest_count__c</fullName>
    <label>Guest count</label>
    <type>TextArea</type>
</CustomField>