unpackaged/main/default/objects/Lead/fields/Imposed_City_Tax__c.field-meta.xml
<CustomField>
    <fullName>Imposed_City_Tax__c</fullName>
    <label>Imposed City Tax?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>