unpackaged/main/default/objects/Lead/fields/Incorporated_Registered_Country__c.field-meta.xml
<CustomField>
    <fullName>Incorporated_Registered_Country__c</fullName>
    <label>Incorporated/Registered Country</label>
    <type>TextArea</type>
</CustomField>