unpackaged/main/default/objects/Lead/fields/Initial_Enq_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Initial_Enq_Outcome__c</fullName>
    <label>Initial Enq Outcome</label>
    <length>225</length>
    <type>Text</type>
</CustomField>