unpackaged/main/default/objects/Lead/fields/Initial_Enq_Reference__c.field-meta.xml
<CustomField>
    <fullName>Initial_Enq_Reference__c</fullName>
    <label>Initial Enq  Reference</label>
    <length>225</length>
    <type>Text</type>
</CustomField>