unpackaged/main/default/objects/Lead/fields/Is_VAT_applicable_to_your_services_in_yo__c.field-meta.xml
<CustomField>
    <fullName>Is_VAT_applicable_to_your_services_in_yo__c</fullName>
    <label>Is VAT applicable to your services in yo</label>
    <type>TextArea</type>
</CustomField>