unpackaged/main/default/objects/Lead/fields/Job_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Start_Date__c</fullName>
    <label>Job Start Date</label>
    <type>TextArea</type>
</CustomField>