unpackaged/main/default/objects/Lead/fields/Lead_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type__c</fullName>
    <label>Lead Sub-Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Serviced Accommodation (Situ Standard)</fullName>
            </value>
            <value>
                <fullName>Stays.co.uk Lead</fullName>
            </value>
            <value>
                <fullName>Vacation Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>