unpackaged/main/default/objects/Lead/fields/Lead_Source_Other__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Other__c</fullName>
    <inlineHelpText>Other field for Lead Source</inlineHelpText>
    <label>Lead Source (Other)</label>
    <type>TextArea</type>
</CustomField>