unpackaged/main/default/objects/Lead/fields/Lead_Sub__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub__c</fullName>
    <inlineHelpText>Select the person who managed the lead through the onboarding process.</inlineHelpText>
    <label>Lead Sub-Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jasmine Tavakoli</fullName>
            </value>
            <value>
                <fullName>Sam Davies</fullName>
            </value>
            <value>
                <fullName>Stewart Black</fullName>
            </value>
            <value>
                <fullName>Conar Pearson</fullName>
            </value>
            <value>
                <fullName>Monika Meel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>