unpackaged/main/default/objects/Lead/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <inlineHelpText>Enter the Partner&#39;s Legal Entity Name. This is the full name that appears on their incorporation documents.</inlineHelpText>
    <label>Legal Entity Name</label>
    <type>TextArea</type>
</CustomField>