unpackaged/main/default/objects/Lead/fields/Linked_In__c.field-meta.xml
<CustomField>
    <fullName>Linked_In__c</fullName>
    <label>Linked In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>