unpackaged/main/default/objects/Lead/fields/Number_of_properties__c.field-meta.xml
<CustomField>
    <fullName>Number_of_properties__c</fullName>
    <label>Number of properties</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>