unpackaged/main/default/objects/Lead/fields/Operation_Currency__c.field-meta.xml
<CustomField>
    <fullName>Operation_Currency__c</fullName>
    <label>Operation Currency</label>
    <type>TextArea</type>
</CustomField>