unpackaged/main/default/objects/Lead/fields/Operation_Model__c.field-meta.xml
<CustomField>
    <fullName>Operation_Model__c</fullName>
    <label>Operation Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner/Operator</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>