unpackaged/main/default/objects/Lead/fields/Operation_Time__c.field-meta.xml
<CustomField>
    <fullName>Operation_Time__c</fullName>
    <description>Please enter how long the partner has been operating.</description>
    <inlineHelpText>Please enter how long the partner has been operating.</inlineHelpText>
    <label>Operation Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operation_Time</valueSetName>
    </valueSet>
</CustomField>