unpackaged/main/default/objects/Lead/fields/OTA_Listing__c.field-meta.xml
<CustomField>
    <fullName>OTA_Listing__c</fullName>
    <label>OTA Listing</label>
    <length>13072</length>
    <type>LongTextArea</type>
</CustomField>