unpackaged/main/default/objects/Lead/fields/Partner_Accreditations__c.field-meta.xml
<CustomField>
    <fullName>Partner_Accreditations__c</fullName>
    <label>Partner Accreditations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greengage</fullName>
            </value>
            <value>
                <fullName>Quality in Tourism</fullName>
            </value>
            <value>
                <fullName>I-PRAC</fullName>
            </value>
            <value>
                <fullName>ISAAP</fullName>
            </value>
            <value>
                <fullName>Ecovadis</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>