unpackaged/main/default/objects/Lead/fields/Partner_Accreditations_Other__c.field-meta.xml
<CustomField>
    <fullName>Partner_Accreditations_Other__c</fullName>
    <description>Other field for Partner Accreditations</description>
    <inlineHelpText>Other field for Partner Accreditations</inlineHelpText>
    <label>Partner Accreditations (Other)</label>
    <type>TextArea</type>
</CustomField>