unpackaged/main/default/objects/Lead/fields/Partner_Associations_Membership__c.field-meta.xml
<CustomField>
    <fullName>Partner_Associations_Membership__c</fullName>
    <label>Partner Associations Membership</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASAP (The Association of Serviced Apartment Providers)</fullName>
            </value>
            <value>
                <fullName>CHPA (The Corporate Housing Providers Association)</fullName>
            </value>
            <value>
                <fullName>HBAA (The Hotel Booking Agents Association)</fullName>
            </value>
            <value>
                <fullName>ITM (The Institute of Travel Management)</fullName>
            </value>
            <value>
                <fullName>PASC UK (The Professional Association of Self-Caterers UK)</fullName>
            </value>
            <value>
                <fullName>ASSC (The Association of Scotland&#39;s Self-Caterers)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>