unpackaged/main/default/objects/Lead/fields/Partner_Associations_Membership_Other__c.field-meta.xml
<CustomField>
    <fullName>Partner_Associations_Membership_Other__c</fullName>
    <description>Other field for Partner Associations Membership</description>
    <inlineHelpText>Other field for Partner Associations Membership</inlineHelpText>
    <label>Partner Associations Membership (Other)</label>
    <type>TextArea</type>
</CustomField>