unpackaged/main/default/objects/Lead/fields/Partnered_date__c.field-meta.xml
<CustomField>
    <fullName>Partnered_date__c</fullName>
    <label>Partnered date</label>
    <type>DateTime</type>
</CustomField>