unpackaged/main/default/objects/Lead/fields/Preferred_Connectivity__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Connectivity__c</fullName>
    <description>Captures the partner&#39;s preferred connectivity route.</description>
    <inlineHelpText>Select the partner&#39;s preferred method for connecting their property data (PMS, Channel Manager, Manual Upload, or Other).</inlineHelpText>
    <label>Preferred Connectivity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Connectivity_Routes</valueSetName>
    </valueSet>
</CustomField>