unpackaged/main/default/objects/Lead/fields/Property_Location__c.field-meta.xml
<CustomField>
    <fullName>Property_Location__c</fullName>
    <label>Property Location</label>
    <type>TextArea</type>
</CustomField>