unpackaged/main/default/objects/Lead/fields/Property_Management_Systems__c.field-meta.xml
<CustomField>
    <fullName>Property_Management_Systems__c</fullName>
    <description>Select what PMS this partner uses. If &#39;Other&#39;, fill in the Property Management Systems (Other) box.</description>
    <label>Property Management Systems</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Property_Management_Systems</valueSetName>
    </valueSet>
</CustomField>