unpackaged/main/default/objects/Lead/fields/Property_Management_Systems_Other__c.field-meta.xml
<CustomField>
    <fullName>Property_Management_Systems_Other__c</fullName>
    <description>Fill in this box if the partner uses a Property Management System that is not listed in the main list.</description>
    <inlineHelpText>Fill in this box if the partner uses a Property Management System that is not listed in the main list.</inlineHelpText>
    <label>Property Management Systems (Other)</label>
    <type>TextArea</type>
</CustomField>