unpackaged/main/default/objects/Lead/fields/Property_Types__c.field-meta.xml
<CustomField>
    <fullName>Property_Types__c</fullName>
    <description>Select the Property Type(s) the Partner has.</description>
    <inlineHelpText>Select the Property Type(s) the Partner has.</inlineHelpText>
    <label>Property Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Property_Types</valueSetName>
    </valueSet>
</CustomField>