unpackaged/main/default/objects/Lead/fields/Quick_Notes__c.field-meta.xml
<CustomField>
    <fullName>Quick_Notes__c</fullName>
    <label>Quick Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>