unpackaged/main/default/objects/Lead/fields/Reengaged__c.field-meta.xml
<CustomField>
    <fullName>Reengaged__c</fullName>
    <description>Field used to measure active engagement in the recent campaign</description>
    <label>Reengaged</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Engagement</valueSetName>
    </valueSet>
</CustomField>