unpackaged/main/default/objects/Lead/fields/Regions__c.field-meta.xml
<CustomField>
    <fullName>Regions__c</fullName>
    <inlineHelpText>List all the global regions the partner operates in.</inlineHelpText>
    <label>Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regions</valueSetName>
    </valueSet>
</CustomField>