unpackaged/main/default/objects/Lead/fields/Registered_Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Registered_Company_Number__c</fullName>
    <label>Registered Company Number</label>
    <type>TextArea</type>
</CustomField>