unpackaged/main/default/objects/Lead/fields/Services_Included_in_Nightly_Price__c.field-meta.xml
<CustomField>
    <fullName>Services_Included_in_Nightly_Price__c</fullName>
    <label>Services Included in Nightly Price</label>
    <type>TextArea</type>
</CustomField>