unpackaged/main/default/objects/Lead/fields/Stage_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Change_Date__c</fullName>
    <label>Stage Change Date</label>
    <type>DateTime</type>
</CustomField>