unpackaged/main/default/objects/Lead/fields/Stock_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Stock_Breakdown__c</fullName>
    <label>Stock Breakdown</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>