unpackaged/main/default/objects/Lead/fields/Suitable_for_Corporate_Guests__c.field-meta.xml
<CustomField>
    <fullName>Suitable_for_Corporate_Guests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suitable for Corporate Guests</label>
    <type>Checkbox</type>
</CustomField>