unpackaged/main/default/objects/Lead/fields/Supplier_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Accounts</label>
    <referenceTo>Supplier_Accounts__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>