unpackaged/main/default/objects/Lead/fields/Supplier_Form_Property_Count__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Form_Property_Count__c</fullName>
    <label>Supplier Form Property Count</label>
    <length>1001</length>
    <type>LongTextArea</type>
</CustomField>