unpackaged/main/default/objects/Lead/fields/Supplier_Operation__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Operation__c</fullName>
    <label>Supplier Operation</label>
    <type>TextArea</type>
</CustomField>