unpackaged/main/default/objects/Lead/fields/Supplier_Stage__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Stage__c</fullName>
    <label>Supplier Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospective Provider</fullName>
            </value>
            <value>
                <fullName>In Progress Partnership</fullName>
            </value>
            <value>
                <fullName>No reply</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Partnered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>