unpackaged/main/default/objects/Lead/fields/Supplier_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Sub_Stage__c</fullName>
    <inlineHelpText>Select the current Supplier Sub-Stage to show how far along the onboarding process the lead is.</inlineHelpText>
    <label>Supplier Sub-Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent initial onboarding email</fullName>
                <default>true</default>
                <label>Sent initial onboarding email</label>
            </value>
            <value>
                <fullName>Sent key requirements email</fullName>
            </value>
            <value>
                <fullName>Due Diligence In Progress</fullName>
            </value>
            <value>
                <fullName>Onboarding Paused</fullName>
            </value>
            <value>
                <fullName>Awaiting US PAA</fullName>
            </value>
            <value>
                <fullName>PAA review in progress</fullName>
            </value>
            <value>
                <fullName>Sent Portal login</fullName>
            </value>
            <value>
                <fullName>Onboarding content</fullName>
            </value>
            <value>
                <fullName>Content uploaded</fullName>
            </value>
            <value>
                <fullName>No reply - 1 week</fullName>
            </value>
            <value>
                <fullName>No reply - 2 week</fullName>
            </value>
            <value>
                <fullName>Rejected - Additional Supply Not Required in Location</fullName>
            </value>
            <value>
                <fullName>Rejected - Less than 10 properties</fullName>
            </value>
            <value>
                <fullName>Rejected - Unsatisfactory reviews/standards</fullName>
            </value>
            <value>
                <fullName>Rejected - No compatible CM/PMs connection</fullName>
            </value>
            <value>
                <fullName>Incomplete Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>