unpackaged/main/default/objects/Lead/fields/Supplier_welcome_service__c.field-meta.xml
<CustomField>
    <fullName>Supplier_welcome_service__c</fullName>
    <label>Supplier Welcome Service</label>
    <type>TextArea</type>
</CustomField>