unpackaged/main/default/objects/Lead/fields/supply_contact__c.field-meta.xml
<CustomField>
    <fullName>supply_contact__c</fullName>
    <label>supply contact</label>
    <length>250</length>
    <type>Text</type>
</CustomField>