unpackaged/main/default/objects/Lead/fields/Total_Apartments_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Apartments_Units__c</fullName>
    <inlineHelpText>Select the total number of apartments/units this supplier has.</inlineHelpText>
    <label>Total Apartments/Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-9</fullName>
            </value>
            <value>
                <fullName>10-24</fullName>
            </value>
            <value>
                <fullName>25-49</fullName>
            </value>
            <value>
                <fullName>50-99</fullName>
            </value>
            <value>
                <fullName>100-249</fullName>
            </value>
            <value>
                <fullName>250-499</fullName>
            </value>
            <value>
                <fullName>500-999</fullName>
            </value>
            <value>
                <fullName>1000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>