unpackaged/main/default/objects/Lead/fields/Total_Buildings_Properties__c.field-meta.xml
<CustomField>
    <fullName>Total_Buildings_Properties__c</fullName>
    <inlineHelpText>Enter how many properties the Partner operates.</inlineHelpText>
    <label>Total Buildings/Properties</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-9</fullName>
            </value>
            <value>
                <fullName>10-24</fullName>
            </value>
            <value>
                <fullName>25-49</fullName>
            </value>
            <value>
                <fullName>50-99</fullName>
            </value>
            <value>
                <fullName>100+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>