unpackaged/main/default/objects/Lead/fields/Towns_Cities__c.field-meta.xml
<CustomField>
    <fullName>Towns_Cities__c</fullName>
    <inlineHelpText>Enter the town/city(s) in which the partner operates.</inlineHelpText>
    <label>Towns/Cities</label>
    <type>TextArea</type>
</CustomField>