unpackaged/main/default/objects/Lead/fields/Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>Trading_Name__c</fullName>
    <label>Trading Name</label>
    <type>TextArea</type>
</CustomField>