unpackaged/main/default/objects/Lead/fields/Type_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Stay__c</fullName>
    <label>Type of Stay</label>
    <type>TextArea</type>
</CustomField>