unpackaged/main/default/objects/Lead/fields/UK_VAT_Registered__c.field-meta.xml
<CustomField>
    <fullName>UK_VAT_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UK VAT Registered</label>
    <type>Checkbox</type>
</CustomField>